Fix page flicker on Kva color change
Hide mobile-carousel-thumbnails when empty (was causing a height shift at certain times)
Fixed height of image container in mobile to compensate for times when javascript is not fast enough to hide and show the variant images simultaneously
Fixed the title so that is is not continuously rendered
Used proper H1 for the title instead of a span with a class

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Blades/ProductDetail/_product-details.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Blades/ProductDetail/_product-details.scss
@@ -1,3 +1,9 @@
+#product-gallery {
+    @include media-breakpoint-down(sm) {
+        height: 122vw;
+    }
+}
+
 .product-details {
     .add-to-wishlist {
         position: absolute;
